--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ font-family:cursive;
 animation-name:qoute;
 animation-duration:7s;
 position:relative;
+height:auto;
+width:auto;
 }
 @keyframes qoute
 {
@@ -98,8 +100,10 @@ height:20px;
 }
 #marriage
 {
-width:200px;
-height:150px;
+max-width:200px;
+max-height:150px;
+width:auto;
+height:auto;
 margin-left:1098px;
 margin-top:0%;
 position:relative;
