--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <title>Invitaion</title>
 <style>
+ @media (max-width: 768px) {
+  body,html {
+   max-width: 100%;
+   min-width: 100%;
+ }
+}
 #qoute
 {
 padding-top:;
