--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <title>Invitaion</title>
 <style>
-
+[class*="col-"] {
+  width: 100%;
+}
 #qoute
 {
 padding-top:;
