--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ to{left:0%;}
 text-align:center;
 text-shadow:2px 2px #f0d9aa;
 font-size:45px;
-font-family: Brush Script MT;
+font-family: Dancing Script;
 color:#1c42b8;
 animation-name:name;
 animation-duration:8s;
