--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 [class*="col-"] {
   width: 100%;
 }
+  @media only screen and (max-width: 600px) {
+  body{
+      height:1000px;
+       width:500px;
+  }
+}
 #qoute
 {
 padding-top:;
