--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 }
   @media only screen and (max-width: 600px) {
   body{
-      height:1000px;
-       width:500px;
+       max-height:1000px;
+       max-width:500px;
   }
 }
 #qoute
