--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
        max-width:100%;
   }
 }
+   @media only screen and (max-width: 600px) {
+  quote{
+      font-size:20px;
+  }
+}
 #qoute
 {
 padding-top:;
