--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
        max-width:100%;
   }
 }
-   @media only screen and (max-width: 600px) {
-  quote{
-      font-size:20px;
+   @media screen and (max-width: 600px) {
+  #quote{
+      font-size:2px;
   }
 }
 #qoute
