--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 [class*="col-"] {
   width: 100%;
 }
-  @media only screen and (max-width: 600px) {
+  @media screen and (max-width: 600px) {
   body{
        max-height:100%;
        max-width:100%;
