--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Invitaion</title>
 <style>
-[class*="col-"] {
-  width: 100%;
-}
   @media screen and (max-width: 600px) {
   body{
        max-height:100%;
@@ -14,8 +11,9 @@
   }
 }
    @media screen and (max-width: 600px) {
-  #quote{
-      font-size:2px;
+  #marriage{
+      max-width:10px;
+      max-height:10px;
   }
 }
 #qoute
