--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
        max-width:100%;
   }
 }
-   @media screen and (max-width: 600px) {
+   @media screen and (min-width: 600px) {
   #marriage{
-      max-width:10px;
-      max-height:10px;
+      max-width:200px;
+      max-height:200px;
   }
 }
 #qoute
@@ -111,8 +111,8 @@ height:20px;
 
 #marriage
 {
-width:200px;
-height:150px;
+width:100px;
+height:100px;
 position:relative;
 margin-left:40%;
 opacity:0.8;
