--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@ border:3px solid black;
 border-radius:20px;
 animation-name:button;
 animation-duration:10s;
-position:relative;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ -ms-transform: translate(-50%, -50%);
+ transform: translate(-50%, -50%);
 }
 #datebtn:hover
 {
