--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ position:relative;
 }
 @keyframes name
 {
-from{left:-50%;}
-to{left:0%;}
+from{bottom:-50%;}
+to{bottom:0%;}
 }
 .mystyle 
 {
@@ -72,6 +72,7 @@ border:3px solid black;
 border-radius:20px;
 animation-name:button;
 animation-duration:10s;
+position:relative;
 }
 #datebtn:hover
 {
