--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ to{right:0%;}
 }
 #bg
 {
-background-image:url('https://www.hdnicewallpapers.com/Walls/Big/Love%20Heart/Red_Heart_HD_Background_Wallpaper.jpg');
+background-image:url('https://png.pngtree.com/thumb_back/fw800/background/20190214/pngtree-simple-love-romantic-balloon-background-image_3152.jpg');
 height:auto;
 background-position: center;
 background-repeat: no-repeat;
