--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ padding-top:;
 color:yellow;
 padding-left:30%;
 padding-right:20%;
-font-size:30px;
+font-size:20px;
 text-shadow: 2px 3px black;
 text-wrap:no;
 font-family:cursive;
@@ -38,7 +38,7 @@ to{left:0%;}
 #name
 {
 text-align:center;
-text-shadow:2px 2px #f0d9aa;
+text-shadow:2px 2px white;
 font-size:45px;
 font-family: cursive;
 color:#1c42b8;
@@ -62,7 +62,7 @@ to{bottom:0%;}
 }
 #datebtn
 {
-font-size:20px;
+font-size:10px;
 width:100px;
 height:20px;
 margin-top:3%;
