--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ padding-top:;
 color:yellow;
 padding-left:30%;
 padding-right:20%;
-font-size:20px;
+font-size:25px;
 text-shadow: 2px 3px black;
 text-wrap:no;
 font-family:cursive;
@@ -66,9 +66,9 @@ font-size:10px;
 width:100px;
 height:20px;
 margin-top:3%;
-margin-left:30%;
+margin-left:40%;
 background-color:#03fce3;
-border:3px solid black;
+border:1px solid white;
 border-radius:20px;
 animation-name:button;
 animation-duration:10s;
