--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ color:yellow;
 padding-left:30%;
 padding-right:20%;
 font-size:25px;
+width:100px;
 text-shadow: 2px 3px black;
 text-wrap:no;
 font-family:cursive;
@@ -112,7 +113,7 @@ height:20px;
 #marriage
 {
 width:120px;
-height:100px;
+height:90px;
 position:relative;
 margin-left:40%;
 }
