--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ to{right:0%;}
 #bg
 {
 background-image:url('https://i.pinimg.com/originals/db/75/6d/db756db5b96d8f97b141070f47e5ad70.jpg');
-height:100%;
+height:auto;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
