--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ max-height:auto;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
+overflow:hidden;
 }
 #arrow
 {
