--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
 overflow:hidden;
+background-color:#f7028d;
 }
 #arrow
 {
