--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
+<meta property="og:image" content="https://i.pinimg.com/originals/db/75/6d/db756db5b96d8f97b141070f47e5ad70.jpg"/> 
 <title>Invitaion</title>
 <style>
   @media screen and (max-width: 600px) {
