--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta property="og:image" content="https://i.pinimg.com/originals/db/75/6d/db756db5b96d8f97b141070f47e5ad70.jpg"/>
 <meta property="og:description" content="ivite to all">
-<meta property="og:image" itemprop="image" content="https://bla123.neocities.org/mp/images/thumbs/IMG_327.JPG"/>
-<title>Skathi weds Sangeetha</title>
+<title>Sakthi weds Sangeetha</title>
 <style>
   @media screen and (max-width: 600px) {
   body{
